src/styles/layouts/_footer.scss
@use "sass:map";
@use "@styles/variables" as vars;
@use "@styles/mixins" as mx;
@use "@sass-butler/functions" as butler-fn;
@use "@sass-butler/mixins" as butler-mx;

.c-footer {
  --space-walking: 40px;

  &__farewell {
    margin-top: 60px;
    grid-area: farewell;
    display: flex;
    gap: var(--gap, 5%);

    &-image-wrapper {
      flex: 0 0 var(--basis-flex, 50%);
      display: flex;

      @include mx.breakpoint("md") {
        --basis-flex: 40%;
      }

      img {
        filter: drop-shadow(0 0 25px rgb(255 255 255 / 20%));
      }
    }

    &-text {
      display: var(--display, none);
      font-family: vars.$berliner;
      align-self: center;
      font-size: butler-fn.fluid(32, 48, 320, 1260);

      @include mx.breakpoint("xs") {
        --display: block;
      }
    }
  }

  &__ground {
    background-color: var(--color-background, color-mix(in srgb, var(--orange-200) 60%, white));
    padding: 25px 0;

    @include butler-mx.dark-mode-class {
      --color-background: var(--new-blue-400);
    }

    .c-footer__wrapper {
      display: grid;
      grid-template-columns: repeat(auto-fit, minmax(230px, 1fr));
      grid-template-areas: var(--areas-template);
      gap: 1rem;
    }

    &-image {
      grid-area: image;
      mix-blend-mode: multiply;

      @include butler-mx.dark-mode-class {
        mix-blend-mode: lighten;
        filter: invert(1);
      }
    }

    .c-install-button {
      --padding: 0.5rem 1rem;

      gap: 0.5rem;
    }
  }

  &__nav {
    background-color: var(--color-background, var(--secondary));

    &-list {
      display: flex;
      flex-direction: column;
      gap: 12px;
    }

    &.is-legal {
      grid-area: nav-legal;
    }
  }

  &__slogan {
    grid-area: slogan;
    text-align: var(--align-text, center);

    @include mx.breakpoint("md") {
      --align-text: left;
    }
  }

  &__end {
    background-color: var(--color-background, var(--orange-200));
    font-size: 0.8rem;

    @include butler-mx.dark-mode-class {
      --color-background: var(--blue);
    }

    &-content {
      grid-area: content;
      display: flex;
      gap: vars.$spacer * 0.5;
      padding-top: vars.$spacer * 0.5;
      padding-bottom: vars.$spacer * 0.5;
      flex-wrap: wrap;
      justify-content: var(--content-justify, center);

      @include mx.breakpoint("md") {
        --content-justify: flex-start;
      }

      p {
        margin: 0;
      }
    }
  }
}

